got requiresAuth to work.
